<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Institut supérieur des études technologiques de Kélibia</string>
    <string name="text_hello">slt pour tout</string>
    <string name="Email">Email</string>
    <string name="action_settings">Paramètres</string>
    <string name="CIN">CIN</string>
    <string name="call">            Appeler : 72 277 090</string>
    <string name="adr">            Adresse : Wed khatef, Kélibia 8090, Tunisie</string>
    <string name="departementtiisetkelibia">            departementtiisetkelibia</string>
    <string name="login">S Identifier</string>
    <string name="classe">Classe</string>
    <string name="Login2">S Identifier2</string>
    <string name="password">Mot de passe</string>
    <string name="textview">TextView</string>
    <string name="title_activity_googlemap">Carte</string>
    <string name="accueil">Accueil</string>
    <string name="MonCompte">Mon Compte</string>
    <string name="Gf">Galerie Photos</string>
    <string name="institut">Institut</string>
    <string name="contact">Contact</string>
    <string name="nom">Nom</string>
    <string name="news">News</string>
    <string name="La_Liste_Des_Emplois_Disponible">La Liste Des Emplois Disponible</string>
    <string name="La_Liste_Des_Cours_Disponible">La Liste Des Cours Disponible</string>
    <string name="La_Liste_Des_Examen_Disponible">La Liste Des Examens Disponible</string>
    <string name="mesreclamation">Mes Réclamations</string>
    <string name="TI">Technologie D\'Informatique</string>
    <string name="InstitutInfo">L\'institut supérieur des études technologiques de Kélibia est une institution d\' enseignement supérieur tunisienne fondée en 2012 et ayant pour vocation de former des diplômés en licence appliquée dans le cadre de la réforme LMD .\n  Il compte trois départements:
                          \n 1: Département Des Technologies de l\'Informatique.
                          \n 2: Département De Génie des Procédes.
                          \n 3: Département Des Engins Maritimes.

\n L\'institution se trouve à Kélibia dans le gouvernorat de Nabeul.</string>
    <string name="GP">Génie des Procédés</string>
    <string name="GM">Génie Maritime</string>
    <string name="prenom">Prénom</string>
    <string name="Filière">département</string>
    <string name="daten">Date de naissance</string>
    <string name="parametre">Paramètre</string>
    <string name="Com">Communication</string>
    <string name="envoyer">Envoyer !</string>
    <string name="Réclamation">Réclamation</string>
    <string name="Posezreclamation">Posez Votre Réclamation !</string>
    <string name="bienvenu">Bienvenu Dans Votre Compte</string>
    <string name="ISET">Institut Supérieur des Etudes Technologique de Kélibia </string>
    <string name="title_activity_maps">Map</string>
    <string name="discussion">Discussion</string>
    <string name="emploi">Emploi</string>
    <string name="reclamation2">Reclamation</string>
    <string name="resultat">Resultat</string>
    <string name="absencen">Absence</string>
    <string name="cours">Cours</string>
    <string name="examens">Examen</string>
    <string name="Services">Services</string>
    <string name="Bourse">Bourse</string>
    <string name="Foyer">Foyer</string>
    <string name="bourse">Les demandes de subventions et de prêts</string>
    <string name="bourse1">Foyer</string>
    <string name="bourse2">Foyer</string>
    <string name="bourseloi">Conditions d\'obtention subvention</string>
    <string name="foyer">Logement Universitaire</string>
    <string name="foyerrnv">Renouvellement Du Logement Universitaire</string>
    <string name="Ajouter_une_photo">Ajouter une photo</string>
    <string name="services">Services</string>

</resources>

