<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/accueil"
            android:title="@string/accueil"
            android:icon="@mipmap/accueil"/>
        <item
            android:id="@+id/mon_compte"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/MonCompte" />
        <item
            android:id="@+id/galerie_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Gf" />

    </group>

    <item android:title="@string/Com">
        <menu>
            <item
                android:id="@+id/institut"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/institut" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_room_black"
                android:title="@string/contact" />
            <item
            android:id="@+id/parametres"
            android:icon="@drawable/settings"
            android:title="@string/parametre" />
        </menu>
    </item>

</menu>
