<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.med.accueil.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_profile"
                android:layout_width="131dp"
                android:layout_height="107dp"
                android:background="@mipmap/compte"/>
            <Button
                android:id="@+id/button_discussion"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:background="@mipmap/discussion"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="42dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/MonCompte"
                android:layout_width="133dp"
                android:layout_height="40dp"
                android:text="@string/MonCompte"
                android:layout_gravity="left"
                android:gravity="center"/>
            <TextView
                android:id="@+id/discussion"
                android:layout_width="139dp"
                android:layout_height="40dp"
                android:text="@string/discussion"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:id="@+id/button_emploi"
                android:layout_width="136dp"
                android:layout_height="109dp"
                android:background="@mipmap/emploi"
                />

            <Button
                android:id="@+id/button_cours"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:background="@mipmap/cours"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="266dp"
            android:layout_height="42dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/emploi"
                android:layout_width="134dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/emploi"
                android:layout_gravity="left"/>
            <TextView
                android:id="@+id/Cours"
                android:layout_width="136dp"
                android:layout_height="40dp"
                android:gravity="center"

                android:text="@string/cours" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button_examens"
                android:layout_width="140dp"
                android:layout_height="99dp"
                android:background="@mipmap/cours"
                />

            <Button
                android:id="@+id/button_alert"
                android:layout_width="131dp"
                android:layout_height="match_parent"
                android:background="@mipmap/alert"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="279dp"
            android:layout_height="42dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/examen"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:gravity="center"

                android:text="@string/examens"
                android:layout_gravity="left"/>
            <TextView
                android:id="@+id/réclamation"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/Réclamation" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_absence"
                android:layout_width="146dp"
                android:layout_height="103dp"
                android:background="@mipmap/absence"/>

            <Button
                android:id="@+id/button_resultat"
                android:layout_width="138dp"
                android:layout_height="103dp"
                android:background="@mipmap/news" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/notet"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/absencen"
                android:layout_gravity="left"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/resultatt"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:text="@string/news"
                android:gravity="center"
                /></LinearLayout>
    </LinearLayout>
</ScrollView>
