<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/ISET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:id="@+id/textView"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView android:src="@drawable/position"
            android:layout_margin="10dp"
            android:layout_width="19dp"
            android:layout_height="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adresse"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phone"
            android:id="@+id/imageView8"
            android:layout_margin="10dp"/>

        <TextView
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adresse2"
            android:layout_gravity="center"
            android:layout_margin="10dp"         />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@mipmap/email"
            android:id="@+id/imageView9"
            android:layout_margin="10dp"
            />

        <TextView
            android:text="@string/departementtiisetkelibia"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textView3" />



    </LinearLayout>

<!--<com.google.android.maps.MapView
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    class="com.google.android.gms.maps.SupportMapFragment"
   />
!-->

</LinearLayout>