<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CIN"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff8432" />

        <EditText
            android:id="@+id/edittext_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|number"
            android:textColor="#e55b00" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff8432" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#e55b00" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#82be74"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#82be74"
            android:text="@string/Login2"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/center_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/moncpt"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentTop="true" />

</RelativeLayout>